[package]
name = "alert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rayon = "1.5.1"
serde_json = "1.0.64"
serenity = "0.10.8"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "2.1.1", features = ["json"] }
